# sensor-fusion-headtracking

./: .gitignore  CMakeLists.txt
cpp_firmware/: i2c_mpu9250.cpp
data/: mpu9250_log.txt
docs/: README.md
include/: i2c_mpu9250.hpp  tools.hpp
python/: plot_sensor.py
src/: i2c_mpu9250.cpp  main.cpp  tools.cpp
